tests/runner/src/snapshots/tlang_test_runner__tests__loops_for_loop_accumulator_javascript@loops__for_loop_accumulator.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: apply_redactions(&output)
input_file: tests/loops/for_loop_accumulator.tlang
---
[stdin]:238
                $tmp$1 = return accumulator$$;;
                         ^^^^^^
Expression expected

SyntaxError: Unexpected token 'return'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:393:10)
    at evalTypeScript (node:internal/process/execution:261:22)
    at node:internal/main/eval_stdin:51:5
    at Socket.<anonymous> (node:internal/process/execution:206:5)
    at Socket.emit (node:events:519:35)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)

Node.js v24.0.2
